# cv-doctor

./: .gitignore  Caddyfile.example  DEPLOYMENT.md  ISSUES.md  PLAN.md  README.md  SAME-PAGE-LOG.md  SECURITY_CHECKLIST.md  docker-compose.prod.yml
backend/: .env.example  Dockerfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 09f1ba519b2f_faz2_initial_tables.py  207be07574fb_faz8_security_hardening_normalize_.py  22c306aaa51d_faz6_job_matching.py  2f777f604675_faz5_ai_outputs.py  7e1880b30417_faz7_production_readiness.py  c760b14c0ac0_faz3_cv_analysis_version.py
backend/app/: main.py
backend/app/ai/: base.py  factory.py  job_prompts.py  mock_provider.py  openai_provider.py  pricing.py  prompts.py  rewrite_prompts.py
backend/app/core/: config.py  dependencies.py  error_handlers.py  exceptions.py  rate_limit_ip.py  security.py  security_headers.py
backend/app/db/: base.py  session.py
backend/app/email/: base.py  brevo_api_sender.py  console_sender.py  factory.py  smtp_sender.py  templates.py
backend/app/models/: __init__.py  ai_output.py  (+10 more)
backend/tests/: test_analysis_contract.py  test_app_boot.py  test_cv_scoring.py  test_dashboard_service.py  test_docx_zip_bomb.py  test_email_normalization.py  test_email_verification.py  test_email_verification_route.py  test_job_match_contract.py  test_no_silent_truncation.py  test_password_reset_token_invalidation.py  test_rate_limit.py  test_rate_limit_ip_spoofing.py  test_service_flows.py  test_turkish_heading_detection.py  test_upload_validation.py
(+208 files in other folders)
