[project]
name = "cv-doktor-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "aiosmtplib>=5.1.2",
    "alembic>=1.18.5",
    "anyio>=4.14.1",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "playwright>=1.61.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sentry-sdk[fastapi]>=2.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
